--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ a {
   color: inherit;
 }
 section {
-  margin-top: 40px;
+  margin-top: 150px;
 }
 ul {
   padding: 0;
@@ -189,4 +189,19 @@ ul {
 .search-container select {
   width: 100%;
   height: 40px;
+}
+
+/* ========================= ABOUT SECTION ========================= */
+.about-container {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 16px;
+  align-items: stretch;
+}
+.experience {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 10px;
+  align-items: start;
+  margin-bottom: 8px;
 }
