--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* Variables */
 :root {
-  --max-width: 1200px;
+  --max-width: 1100px;
 
   /* Buttons */
   --btn-border: 1px solid #000000;
@@ -44,6 +44,17 @@ ul {
   background: #bbbbbb;
 }
 
+.tag-list {
+  list-style: none;
+  display: flex;
+  gap: 12px;
+}
+.tag {
+  border: 1px solid #000000;
+  border-radius: 24px;
+  padding: 8px;
+}
+
 /* ========================= HEADER SECTION ========================= */
 .site-header {
   position: sticky;
@@ -53,7 +64,7 @@ ul {
   background: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(10px);
 }
-.header-content {
+.site-header-inner {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -96,23 +107,29 @@ ul {
 }
 
 /* ========================= HERO SECTION ========================= */
-.hero-content {
+.hero {
+  margin-top: 20px;
+}
+.hero p {
+  margin-top: 0;
+}
+.hero-grid {
   display: grid;
   grid-template-columns: 1.1fr 0.9fr;
   align-items: start;
   gap: 16px;
 }
-.summary .options {
+.hero-grid ul {
+  padding-top: 12px;
+}
+.hero-options {
   list-style: none;
   display: flex;
   gap: 12px;
 }
-.hero-content ul {
-  padding-top: 12px;
-}
 
 /* Metrics */
-.metric-container {
+.metric-grid {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -126,6 +143,7 @@ ul {
 .metric-header {
   font-weight: bold;
   font-size: 20px;
+  margin-bottom: 10px;
 }
 .metric-details {
   color: gray;
@@ -140,16 +158,6 @@ ul {
 }
 .profile {
   padding: 0 16px;
-}
-.tag-list {
-  list-style: none;
-  display: flex;
-  gap: 12px;
-}
-.tag {
-  border: 1px solid #000000;
-  border-radius: 24px;
-  padding: 8px;
 }
 .dot {
   width: 10px;
