--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
 body {
   margin: 0;
 }
+
 a {
   text-decoration: none;
   color: inherit;
@@ -33,6 +34,8 @@ ul {
   margin: 0 auto;
   width: min(var(--max-width), calc(100% - 40px));
 }
+
+/* Buttons */
 .btn {
   background: #ffffff;
   border: var(--btn-border);
@@ -44,6 +47,7 @@ ul {
   background: #bbbbbb;
 }
 
+/* Tags */
 .tag-list {
   list-style: none;
   display: flex;
@@ -53,6 +57,44 @@ ul {
   border: 1px solid #000000;
   border-radius: 24px;
   padding: 8px;
+}
+
+/* Cards */
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 16px;
+  margin-top: 16px;
+}
+.card {
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.12);
+  padding-bottom: 12px;
+}
+.card img {
+  width: 100%;
+  height: 200px;
+}
+.card-body {
+  padding: 0 16px;
+}
+.card-body ul {
+  padding-left: 16px;
+}
+.card-body li {
+  margin-bottom: 8px;
+}
+.card-footer {
+  display: flex;
+  gap: 12px;
+  margin-left: 16px;
+  margin-right: 16px;
+  align-items: center;
+  font-size: 12px;
+}
+.card-footer .btn {
+  font-size: 14px;
 }
 
 /* ========================= HEADER SECTION ========================= */
@@ -77,33 +119,6 @@ ul {
 }
 .fullname {
   font-weight: bold;
-}
-.card-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 16px;
-  margin-top: 16px;
-}
-.card {
-  border-radius: 16px;
-  overflow: hidden;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.12);
-  padding-bottom: 12px;
-}
-.card img {
-  width: 100%;
-  height: 200px;
-}
-.card-body {
-  padding: 0 16px;
-}
-.card-footer {
-  display: flex;
-  gap: 12px;
-  margin-left: 16px;
-  margin-right: 16px;
-  align-items: center;
-  font-size: 12px;
 }
 
 /* ========================= HERO SECTION ========================= */
@@ -200,10 +215,8 @@ ul {
 }
 
 /* ========================= ABOUT SECTION ========================= */
-.about-container {
-  display: grid;
+.card-grid.about {
   grid-template-columns: 2fr 1fr;
-  gap: 16px;
   align-items: stretch;
 }
 .experience {
